Completed structure and styling for Dashboard

--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Pinyon+Script&family=Playwrite+VN:wght@100..400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Silkscreen:wght@400;700&display=swap');
+
+/* for Side bar Dashboard */
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Pinyon+Script&family=Playwrite+VN:wght@100..400&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Silkscreen:wght@400;700&display=swap');
 
+/* Font for Project Card, Trending and Announcement description */
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Jura:wght@300..700&family=Libre+Bodoni:ital,wght@0,400..700;1,400..700&family=Pinyon+Script&family=Playwrite+VN:wght@100..400&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Silkscreen:wght@400;700&display=swap');
+
+/* Everything else */
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Libre+Bodoni:ital,wght@0,400..700;1,400..700&family=Pinyon+Script&family=Playwrite+VN:wght@100..400&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Silkscreen:wght@400;700&display=swap');
 
 * {
     margin: 0;
@@ -8,15 +14,34 @@
     box-sizing: border-box;
 }
 
-/* Sidebar menu */
+body {
+    font-family: "Roboto", serif;
+    font-style: normal;
+}
+
+svg {
+    height: 40px;
+    width: 40px;
+}
+
+
+.container {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+}
+
+
+/* Side Bar */
 
 #sidebar {
-    font-family: "Roboto Mono", serif;
-    font-optical-sizing: auto;
-    font-weight: 500;
-    font-style: normal;
-    font-size: 20px;
+    background-color: lightskyblue;
+    color: white;
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+    padding: 15px;
 }
+
+/* Trademark */
 
 #trade-mark {
     display: flex;
@@ -25,30 +50,270 @@
 }
 
 #trade-mark svg {
-    height: 50px;
-    width: 50px;
+    height: 60px;
+    width: 60px;
 }
 
 #trade-mark p {
-    font-family: "Silkscreen", serif;
-    font-weight: 700;
-    font-style: normal;
-    font-size: 26px;
+    font-family: Silkscreen, serif;
+    font-weight: 400;
+    font-size: 36px;
 }
+
+
+/* Menu Top & Bottom */
 
 .menu li {
     display: flex;
     align-items: center;
-    column-gap: 20px;
-    text-transform: capitalize;
-    margin: 20px 0;
+    column-gap: 15px;
+    padding: 10px 0;
 }
 
-.menu svg {
-    height: 30px;
-    width: 30px;
+.menu span {
+    font-weight: 300;
+    text-transform: capitalize;
+    font-size: 22px;
 }
 
 .menu.top {
-    margin-bottom: 60px;
+    margin: 50px 0;
 }
+
+
+/*  Header */
+
+header {
+    grid-column: 2 / 3;
+}
+
+/* search and navigation */
+
+#header-top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px 30px;
+}
+
+
+#search {
+    display: flex;
+    align-items: center;
+}
+
+#search svg {
+    height: 30px;
+    width: 30px;
+    margin-right: 15px;
+}
+
+#search input[type="search"] {
+    width: 500px;
+    padding: 5px 10px;
+    border: 0.5px solid lightgray;
+    border-radius: 15px;
+}
+
+
+#user-profile {
+    display: flex;
+    align-items: center;
+    column-gap: 20px;
+}
+
+#user-profile span {
+    font-weight: bold;
+}
+
+
+#header-bottom {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px 30px;
+}
+
+#welcome {
+    display: flex;
+    align-items: center;
+}
+
+#welcome svg {
+    height: 70px;
+    width: 70px;
+    margin-right: 15px;
+}
+
+#welcome span {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+#action-buttons {
+    display: flex;
+    column-gap: 30px;
+}
+
+#action-buttons > input {
+    border: none;
+    width: 100px;
+    padding: 10px;
+    color: white;
+    background-color: lightskyblue;
+    border-radius: 20px;
+    font-weight: bold;
+}
+
+
+/* Main Contents */
+
+main {
+    grid-template-columns: 2 / 3;
+
+    /* Create internal grid template for Github Projects, Announcement and Trending sections */
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+}
+
+
+/* Project & Cards */
+
+.projects {
+    background-color: rgb(176, 180, 185);
+    grid-column: 1 / 2;
+    grid-row: 1 / 6;
+    padding: 15px;
+}
+
+.projects > p {
+    margin-bottom: 20px;
+    font-size: 26px;
+    font-weight: 200;
+    color: white;
+}
+
+
+#project-list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+}
+
+.card {
+    background-color: orange;
+    border-radius: 10px;
+}
+
+.story {
+    border-radius: 0 10px 0 0;
+}
+
+.favorite-buttons {
+    border-radius: 0 0 10px 0;
+}
+
+.card > div {
+    width: 99%;
+    margin-left: auto;
+    padding: 30px 10px;
+    background-color: white;
+}
+
+.story p:first-child {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.story p {
+    margin-bottom: 25px;
+    font-family: "Jura", serif;
+}
+
+.favorite-buttons {
+    text-align: right;
+}
+
+.favorite-buttons svg {
+    height: 30px;
+    width: 30px;
+    margin: 0 10px;
+}
+
+
+/* announcement */
+
+.announcement {
+    background-color: rgb(176, 180, 185);
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+    padding: 15px;
+}
+
+.announcement > p {
+    margin-bottom: 20px;
+    font-size: 26px;
+    font-weight: 200;
+    color: white;
+}
+
+.announcement > div {
+    background-color: white;
+    padding: 10px 20px;
+    border-radius: 10px;
+}
+
+.news > p:first-child {
+    font-weight: bold;
+    margin-bottom: 10px;
+    font-size: 20px;
+}
+
+.news p {
+    font-family: "Jura", serif;
+}
+
+
+.news:not(.last) {
+    border-bottom: 2px dotted grey;
+}
+
+.news {
+    padding: 20px 0;
+}
+
+
+/* Trending */
+
+.trending {
+    background-color: rgb(176, 180, 185);
+    grid-column: 2 / 3;
+    grid-row: 3 / 6;
+    padding: 15px;
+}
+
+.trending > p {
+    margin-bottom: 20px;
+    font-size: 26px;
+    font-weight: 200;
+    color: white;
+}
+
+.trending > div {
+    background-color: white;
+    border-radius: 10px;
+    padding: 10px 20px;
+}
+
+.user-id {
+    display: flex;
+    align-items: center;
+    column-gap: 20px;
+    margin: 15px 0;
+    font-family: "Jura", serif;
+}
+
+.username {
+    font-weight: bold;
+}
+
