--- a/style.css
+++ b/style.css
@@ -1,148 +1,173 @@
-
-/* for Side bar Dashboard */
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Pinyon+Script&family=Playwrite+VN:wght@100..400&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Silkscreen:wght@400;700&display=swap');
-
-/* Font for Project Card, Trending and Announcement description */
+/* Side bar dashboard */
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Jura:wght@300..700&family=Libre+Bodoni:ital,wght@0,400..700;1,400..700&family=Pinyon+Script&family=Playwrite+VN:wght@100..400&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Silkscreen:wght@400;700&display=swap');
 
-/* Everything else */
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Libre+Bodoni:ital,wght@0,400..700;1,400..700&family=Pinyon+Script&family=Playwrite+VN:wght@100..400&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Silkscreen:wght@400;700&display=swap');
+/* Overall */
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Jura:wght@300..700&family=Libre+Bodoni:ital,wght@0,400..700;1,400..700&family=Neuton:ital,wght@0,200;0,300;0,400;0,700;0,800;1,400&family=Pinyon+Script&family=Playwrite+VN:wght@100..400&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Silkscreen:wght@400;700&display=swap');
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-body {
-    font-family: "Roboto", serif;
-    font-style: normal;
-}
-
-svg {
-    height: 40px;
-    width: 40px;
+    font-family: "Roboto Mono", serif;
 }
 
 
 .container {
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: minmax(200px, 300px) 4fr;
 }
 
-
-/* Side Bar */
+/* Side bar */
 
 #sidebar {
-    background-color: lightskyblue;
-    color: white;
     grid-column: 1 / 2;
-    grid-row: 1 / 3;
-    padding: 15px;
+    background-color: lightseagreen;
+    color: white;
+    padding: 10px 20px 30px 20px;
 }
 
-/* Trademark */
-
-#trade-mark {
-    display: flex;
-    align-items: center;
-    column-gap: 10px;
-}
-
-#trade-mark svg {
-    height: 60px;
-    width: 60px;
-}
-
-#trade-mark p {
-    font-family: Silkscreen, serif;
-    font-weight: 400;
-    font-size: 36px;
-}
-
-
-/* Menu Top & Bottom */
-
-.menu li {
-    display: flex;
-    align-items: center;
+#top {
+    display: grid;
+    grid-template-columns: 70px 1fr;
     column-gap: 15px;
-    padding: 10px 0;
 }
 
-.menu span {
-    font-weight: 300;
-    text-transform: capitalize;
-    font-size: 22px;
-}
-
-.menu.top {
-    margin: 50px 0;
+#logo {
+    height: 70px;
+    width: 70px;
 }
 
 
-/*  Header */
-
-header {
-    grid-column: 2 / 3;
-}
-
-/* search and navigation */
-
-#header-top {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 15px 30px;
+#top > p {
+    align-self: center;
+    justify-content: start;
+    font-family: Silkscreen, serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 20px;
 }
 
 
-#search {
-    display: flex;
-    align-items: center;
+/* Side bar: Middle section */
+
+#middle {
+    margin: 20px 0 30px 0;
 }
 
-#search svg {
-    height: 30px;
-    width: 30px;
-    margin-right: 15px;
-}
-
-#search input[type="search"] {
-    width: 500px;
-    padding: 5px 10px;
-    border: 0.5px solid lightgray;
-    border-radius: 15px;
-}
-
-
-#user-profile {
+#middle > p {
     display: flex;
     align-items: center;
     column-gap: 20px;
+    font-size: 20px;
+    margin-bottom: 10px;
 }
 
-#user-profile span {
+#middle svg {
+    height: 32px;
+}
+
+/* body column */
+
+#body {
+    grid-column: 2 / 3;
+}
+
+/* Header */
+
+#header {
+    padding: 0 30px;
+}
+
+
+/* Side bar: Bottom section */
+
+#bottom svg {
+    height: 32px;
+}
+
+#bottom > p {
+    display: flex;
+    align-items: center;
+    column-gap: 20px;
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+/* header-top */
+
+.header-top {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 20px 0;
+    font-size: 14px;
     font-weight: bold;
 }
 
+/* search zone */
 
-#header-bottom {
-    display: flex;
+#search-zone {
+    display: grid;
+    grid-template-columns: minmax(30px, 60px) minmax(400px, 600px);
     align-items: center;
-    justify-content: space-between;
-    padding: 15px 30px;
 }
+
+#magnifyi-glass {
+    height: 30px;
+    width: 30px;
+}
+
+#search-zone input {
+    height: 30px;
+    border-radius: 15px;
+    padding: 0 15px;
+    border: 1px solid lightgray;
+}
+
+
+/* User Profile */
+
+#user-profile {
+    display: grid;
+    grid-template-columns: minmax(30px, 40px) minmax(30px, 40px) minmax(100px, 120px);
+    align-items: center;
+    column-gap: 30px;
+    justify-content: end;
+}
+
+#notification {
+    height: 30px;
+}
+
+#user-profile-icon {
+    height: 50px;
+}
+
+#notification,
+#profile-icon,
+#username {
+    justify-self: center;
+}
+
+/* Header Bottom */
+
+.header-bottom {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    margin: 20px 0;
+}
+
+/* welcome */
 
 #welcome {
-    display: flex;
+    display: grid;
+    grid-template-columns: minmax(60px, 80px) minmax(200px, 300px);
     align-items: center;
 }
 
-#welcome svg {
-    height: 70px;
-    width: 70px;
-    margin-right: 15px;
+#welcome-profile-icon {
+    height: 60px;
+    width: 60px;
 }
 
 #welcome span {
@@ -150,170 +175,167 @@ header {
     font-size: 20px;
 }
 
+
+/* Action buttons: New, Upload & Share */
+
 #action-buttons {
-    display: flex;
-    column-gap: 30px;
+    display: grid;
+    grid-template-columns: repeat(3, minmax(100px, 120px));
+    column-gap: 20px;
+    justify-content: end;
 }
 
-#action-buttons > input {
-    border: none;
-    width: 100px;
-    padding: 10px;
+#action-buttons input {
     color: white;
+    border: none;
     background-color: lightskyblue;
+    padding: 10px 0;
     border-radius: 20px;
     font-weight: bold;
 }
 
 
-/* Main Contents */
+/* Main section */
 
-main {
-    grid-template-columns: 2 / 3;
-
-    /* Create internal grid template for Github Projects, Announcement and Trending sections */
+#main {
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 4fr 1fr;
+    background-color: lightgray;
 }
 
 
-/* Project & Cards */
 
-.projects {
-    background-color: rgb(176, 180, 185);
-    grid-column: 1 / 2;
-    grid-row: 1 / 6;
-    padding: 15px;
-}
-
-.projects > p {
-    margin-bottom: 20px;
-    font-size: 26px;
-    font-weight: 200;
-    color: white;
-}
-
+/*  Project List */
 
 #project-list {
+    grid-column: 1 / 2;
+    padding: 20px 0;
+}
+
+#project-list > p {
+    padding-left: 30px;
+    margin: 30px 0 10px 0;
+    font-size: 24px;
+}
+
+#cards {
+    /* Internal layout for Github Project List */
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
+    grid-template-columns: repeat(2, minmax(400px, 600px));
+    justify-content: center;
+    gap: 30px;
 }
 
 .card {
+    background-color: white;
     background-color: orange;
-    border-radius: 10px;
+    border-radius: 15px;
 }
 
-.story {
-    border-radius: 0 10px 0 0;
-}
-
-.favorite-buttons {
-    border-radius: 0 0 10px 0;
-}
 
 .card > div {
-    width: 99%;
-    margin-left: auto;
-    padding: 30px 10px;
+    width: 98%;
     background-color: white;
+    margin-left: auto;
+    padding: 20px;
+    border-radius: 0 15px 15px 0;
 }
 
-.story p:first-child {
+.card p:nth-of-type(1) {
     font-weight: bold;
-    font-size: 20px;
+    font-size: 16px;
 }
 
-.story p {
-    margin-bottom: 25px;
-    font-family: "Jura", serif;
+.card p:nth-of-type(2) {
+    font-size: 12px;
 }
 
-.favorite-buttons {
+.card p:not(:last-child) {
+    margin-bottom: 20px;
+}
+
+.card p:last-child {
     text-align: right;
 }
 
-.favorite-buttons svg {
+.card svg {
     height: 30px;
     width: 30px;
     margin: 0 10px;
 }
 
 
+
+/* Side panel: Announcement & Trending */
+
+aside {
+    grid-column: 2 / 3;
+}
+
+
 /* announcement */
 
-.announcement {
-    background-color: rgb(176, 180, 185);
-    grid-column: 2 / 3;
-    grid-row: 1 / 3;
-    padding: 15px;
+#announcement {
+    padding: 20px 20px 20px 0;
 }
 
-.announcement > p {
-    margin-bottom: 20px;
-    font-size: 26px;
-    font-weight: 200;
-    color: white;
+#announcement > p {
+    margin: 30px 0 10px 0;
+    font-size: 24px;
 }
 
-.announcement > div {
+#announcement > div {
     background-color: white;
-    padding: 10px 20px;
-    border-radius: 10px;
+    padding: 0 20px;
+    border-radius: 15px;
 }
 
 .news > p:first-child {
+    padding-top: 20px;
+    font-size: 14px;
     font-weight: bold;
+}
+
+.news > p:last-child {
+    padding-bottom: 20px;
+    font-size: 12px;
+}
+
+.news > p {
     margin-bottom: 10px;
-    font-size: 20px;
 }
 
-.news p {
-    font-family: "Jura", serif;
-}
-
-
-.news:not(.last) {
-    border-bottom: 2px dotted grey;
-}
-
-.news {
-    padding: 20px 0;
+.news:not(:last-child) {
+    border-bottom: 2px dotted lightskyblue;
 }
 
 
-/* Trending */
+/* trending */
 
-.trending {
-    background-color: rgb(176, 180, 185);
-    grid-column: 2 / 3;
-    grid-row: 3 / 6;
-    padding: 15px;
+#trending {
+    padding: 20px 20px 20px 0;
 }
 
-.trending > p {
-    margin-bottom: 20px;
-    font-size: 26px;
-    font-weight: 200;
-    color: white;
+
+#trending > p {
+    margin-bottom: 10px;
+    font-size: 24px;
 }
 
-.trending > div {
+#trending > div {
     background-color: white;
-    border-radius: 10px;
-    padding: 10px 20px;
+    padding: 20px;
+    border-radius: 15px;
 }
 
-.user-id {
+.topic {
     display: flex;
+    column-gap: 15px;
     align-items: center;
-    column-gap: 20px;
-    margin: 15px 0;
-    font-family: "Jura", serif;
+    margin: 10px 0;
 }
 
-.username {
-    font-weight: bold;
+.topic svg {
+    height: 50px;
+    width: 50px;
 }
-
