--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
 /* Overall */
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Jura:wght@300..700&family=Libre+Bodoni:ital,wght@0,400..700;1,400..700&family=Neuton:ital,wght@0,200;0,300;0,400;0,700;0,800;1,400&family=Pinyon+Script&family=Playwrite+VN:wght@100..400&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Silkscreen:wght@400;700&display=swap');
 
+
+/* Styling start here */
 * {
     margin: 0;
     padding: 0;
@@ -11,247 +13,219 @@
     font-family: "Roboto Mono", serif;
 }
 
+body {
+    height: 100vh;
+}
+
 
 .container {
     display: grid;
-    grid-template-columns: minmax(200px, 300px) 4fr;
+    grid-template-columns: minmax(300px, 400px) 4fr;
 }
+
 
 /* Side bar */
 
-#sidebar {
+.sidebar {
+    /* height: 100vh; */
     grid-column: 1 / 2;
     background-color: lightseagreen;
     color: white;
-    padding: 10px 20px 30px 20px;
+
+    /* Internal layout for sidebar */
+    display: grid;
+    grid-template-rows: minmax(100px, 150px) 1fr 1fr;
 }
 
-#top {
-    display: grid;
-    grid-template-columns: 70px 1fr;
+.top svg {
+    height: 80px;
+    width: 80px;
+}
+
+.top {
+    align-self: self-start;
+    padding: 20px;
+    display: flex;
+    align-items: center;
     column-gap: 15px;
 }
 
-#logo {
-    height: 70px;
-    width: 70px;
-}
-
-
-#top > p {
-    align-self: center;
-    justify-content: start;
+.top p {
     font-family: Silkscreen, serif;
-    font-weight: 700;
-    font-style: normal;
-    font-size: 20px;
+    font-size: 30px;
 }
 
-
-/* Side bar: Middle section */
-
-#middle {
-    margin: 20px 0 30px 0;
+.middle,
+.bottom {
+    padding: 20px;
 }
 
-#middle > p {
+.middle > p,
+.bottom > p {
     display: flex;
     align-items: center;
     column-gap: 20px;
-    font-size: 20px;
-    margin-bottom: 10px;
-}
-
-#middle svg {
-    height: 32px;
-}
-
-/* body column */
-
-#body {
-    grid-column: 2 / 3;
-}
-
-/* Header */
-
-#header {
-    padding: 0 30px;
+    padding: 20px;
 }
 
 
-/* Side bar: Bottom section */
-
-#bottom svg {
-    height: 32px;
-}
-
-#bottom > p {
-    display: flex;
-    align-items: center;
-    column-gap: 20px;
-    font-size: 20px;
-    margin-bottom: 10px;
-}
-
-/* header-top */
-
-.header-top {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    margin: 20px 0;
-    font-size: 14px;
-    font-weight: bold;
-}
-
-/* search zone */
-
-#search-zone {
-    display: grid;
-    grid-template-columns: minmax(30px, 60px) minmax(400px, 600px);
-    align-items: center;
-}
-
-#magnifyi-glass {
+.middle svg,
+.bottom svg {
     height: 30px;
     width: 30px;
 }
 
-#search-zone input {
-    height: 30px;
-    border-radius: 15px;
-    padding: 0 15px;
-    border: 1px solid lightgray;
-}
 
+/* content */
 
-/* User Profile */
-
-#user-profile {
-    display: grid;
-    grid-template-columns: minmax(30px, 40px) minmax(30px, 40px) minmax(100px, 120px);
-    align-items: center;
-    column-gap: 30px;
-    justify-content: end;
-}
-
-#notification {
-    height: 30px;
-}
-
-#user-profile-icon {
-    height: 50px;
-}
-
-#notification,
-#profile-icon,
-#username {
-    justify-self: center;
-}
-
-/* Header Bottom */
-
-.header-bottom {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    margin: 20px 0;
-}
-
-/* welcome */
-
-#welcome {
-    display: grid;
-    grid-template-columns: minmax(60px, 80px) minmax(200px, 300px);
-    align-items: center;
-}
-
-#welcome-profile-icon {
-    height: 60px;
-    width: 60px;
-}
-
-#welcome span {
-    font-weight: bold;
-    font-size: 20px;
-}
-
-
-/* Action buttons: New, Upload & Share */
-
-#action-buttons {
-    display: grid;
-    grid-template-columns: repeat(3, minmax(100px, 120px));
-    column-gap: 20px;
-    justify-content: end;
-}
-
-#action-buttons input {
-    color: white;
-    border: none;
-    background-color: lightskyblue;
-    padding: 10px 0;
-    border-radius: 20px;
-    font-weight: bold;
-}
-
-
-/* Main section */
-
-#main {
-    display: grid;
-    grid-template-columns: 4fr 1fr;
+.content {
+    grid-column: 2 / 3;
     background-color: lightgray;
 }
 
 
+/* Header: Top & Bottom */
 
-/*  Project List */
-
-#project-list {
-    grid-column: 1 / 2;
-    padding: 20px 0;
+.header {
+    background-color: white;
 }
 
-#project-list > p {
-    padding-left: 30px;
-    margin: 30px 0 10px 0;
-    font-size: 24px;
+.header-top,
+.header-bottom {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 40px;
 }
 
-#cards {
-    /* Internal layout for Github Project List */
+/* Header: Search box & User profile */
+
+.search-zone {
+    display: flex;
+    column-gap: 20px;
+}
+
+.search-zone svg {
+    height: 30px;
+    width: 30px;
+}
+
+.search-zone input {
+    min-width: 300px;
+    width: 600px;
+    border-radius: 15px;
+    padding: 0 15px;
+    border: 1px solid lightgrey;
+}
+
+
+.user-profile {
+    display: flex;
+    align-items: center;
+    column-gap: 20px;
+}
+
+.user-profile svg:first-of-type {
+    height: 30px;
+    width: 30px;
+}
+
+.user-profile svg:nth-of-type(2) {
+    height: 60px;
+    width: 60px;
+}
+
+#username {
+    font-weight: bold;
+}
+
+
+/* Navigation bar: Greeting and Action buttons --> New, Upload & Share */
+
+.welcome {
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+}
+
+.welcome svg {
+    height: 70px;
+}
+
+.welcome span {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+
+.action-buttons {
     display: grid;
-    grid-template-columns: repeat(2, minmax(400px, 600px));
-    justify-content: center;
-    gap: 30px;
+    grid-template-columns: repeat(3, minmax(60px, 120px));
+    column-gap: 20px;
+}
+
+.action-buttons input {
+    padding: 10px 0;
+    border: none;
+    border-radius: 20px;
+    background-color: rgb(66, 191, 233);
+    color: white;
+    font-weight: bold;
+}
+
+
+/* body */
+
+.body {
+    display: grid;
+    grid-template-columns: 4fr 2fr;
+}
+
+
+
+/* projects */
+
+.projects {
+    grid-column: 1 / 2;
+}
+
+.projects > p {
+    padding-left: 20px;
+    margin: 25px 0 10px 0;
+    font-size: 18px;
+}
+
+.projects > div {
+   
+    /* Internal grid for project cards */
+    display: grid;
+    grid-template-columns: repeat(2, minmax(300px, 450px));
+    gap: 20px;
+    justify-content: space-around;
 }
 
 .card {
-    background-color: white;
     background-color: orange;
-    border-radius: 15px;
+    border-radius: 10px;
 }
-
 
 .card > div {
     width: 98%;
+    height: 100%;
     background-color: white;
     margin-left: auto;
-    padding: 20px;
-    border-radius: 0 15px 15px 0;
+    border-radius: 0 10px 10px 0;
+    padding: 30px 20px;
 }
 
-.card p:nth-of-type(1) {
+.card p:first-child {
     font-weight: bold;
-    font-size: 16px;
+    margin-bottom: 5px;
 }
 
 .card p:nth-of-type(2) {
     font-size: 12px;
-}
-
-.card p:not(:last-child) {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 .card p:last-child {
@@ -261,81 +235,58 @@
 .card svg {
     height: 30px;
     width: 30px;
-    margin: 0 10px;
+    margin: 0 5px;
 }
 
 
-
-/* Side panel: Announcement & Trending */
+/* Side panel for Announcement & Trending */
 
 aside {
     grid-column: 2 / 3;
+    padding-right: 20px;
+}
+
+aside > div > p:first-child {
+    margin: 25px 0 10px 0;
+    font-size: 18px;
 }
 
 
-/* announcement */
-
-#announcement {
-    padding: 20px 20px 20px 0;
-}
-
-#announcement > p {
-    margin: 30px 0 10px 0;
-    font-size: 24px;
-}
-
-#announcement > div {
+.topic-list {
     background-color: white;
-    padding: 0 20px;
-    border-radius: 15px;
+    border-radius: 10px;
 }
 
-.news > p:first-child {
-    padding-top: 20px;
-    font-size: 14px;
+.topic > div {
+    width: 90%;
+    margin: 0 auto;
+    border-bottom: 1px dotted lightslategray;
+    padding: 20px 0;
+}
+
+.topic p:nth-of-type(1) {
     font-weight: bold;
 }
 
-.news > p:last-child {
-    padding-bottom: 20px;
+.topic p:nth-of-type(2) {
     font-size: 12px;
 }
 
-.news > p {
-    margin-bottom: 10px;
-}
 
-.news:not(:last-child) {
-    border-bottom: 2px dotted lightskyblue;
-}
-
-
-/* trending */
-
-#trending {
-    padding: 20px 20px 20px 0;
-}
-
-
-#trending > p {
-    margin-bottom: 10px;
-    font-size: 24px;
-}
-
-#trending > div {
+.user-trend {
     background-color: white;
-    padding: 20px;
-    border-radius: 15px;
+    padding: 10px 0;
+    border-radius: 10px;
 }
 
-.topic {
+.user {
     display: flex;
-    column-gap: 15px;
     align-items: center;
-    margin: 10px 0;
+    column-gap: 15px;
+    padding: 10px 0 10px 20px;
 }
 
-.topic svg {
-    height: 50px;
-    width: 50px;
+.user svg {
+    height: 45px;
+    width: 45px;
 }
